--- a/PasswordManager/PasswordManager/PasswordManager.csproj
+++ b/PasswordManager/PasswordManager/PasswordManager.csproj
@@ -29,6 +29,15 @@
     <Compile Update="NewFieldPage.xaml.cs">
       <DependentUpon>NewFieldPage.xaml</DependentUpon>
     </Compile>
+    <Compile Update="AddWifiPage.xaml.cs">
+      <DependentUpon>AddWifiPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="AddCardPage.xaml.cs">
+      <DependentUpon>AddCardPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="AddSecureNotePage.xaml.cs">
+      <DependentUpon>AddSecureNotePage.xaml</DependentUpon>
+    </Compile>
     <Compile Update="ShowFieldPage.xaml.cs">
       <DependentUpon>ShowFieldPage.xaml</DependentUpon>
     </Compile>
@@ -54,6 +63,15 @@
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="NewFieldPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="AddWifiPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="AddCardPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="AddSecureNotePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="ShowFieldPage.xaml">
