Complete editing GUI
Signed-off-by: Sanguine <PavelKamenko@mail.ru>

--- a/PasswordManager/PasswordManager.Android/PasswordManager.Android.csproj
+++ b/PasswordManager/PasswordManager.Android/PasswordManager.Android.csproj
@@ -87,9 +87,9 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\PasswordManager\PasswordManager.csproj">
+    <ProjectReference Include="..\PasswordManager\App1.csproj">
       <Project>{0A009C54-9B92-4065-B49D-7B4F6844F83E}</Project>
-      <Name>PasswordManager</Name>
+      <Name>App1</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
@@ -178,6 +178,9 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\images.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\images_rotated.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
