--- a/PasswordManager/PasswordManager.Android/PasswordManager.Android.csproj
+++ b/PasswordManager/PasswordManager.Android/PasswordManager.Android.csproj
@@ -182,5 +182,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\images_rotated.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\beer_icon.xml" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
